# OgmaNeoRs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
cpp_ref/: setup_env.sh
cpp_ref/examples/: cartpole.cpp
cpp_ref/source/aogmaneo/: actor.cpp
doc/: AOgmaNeo_User_Guide.md  CppToRust.md  NameReference.md  TuningGuide.md
examples/: CMakeLists.txt  cartpole.rs  cartpole_env_runner.rs  lunarlander.rs  wave_prediction.rs
rust/examples/: cartpole.rs
rust/src/: actor.rs  decoder.rs  encoder.rs  hierarchy.rs  image_encoder.rs  lib.rs
rust/tests/: smoke_test.rs
source/aogmaneo/: hierarchy.h  image_encoder.cpp  image_encoder.h
src/: actor.rs  decoder.rs  encoder.rs  helpers.rs  hierarchy.rs  image_encoder.rs
tests/: smoke_test.rs
