[package]
name = "aogmaneo"
version = "0.1.0"
edition = "2021"
description = "Sparse Predictive Hierarchies - Rust port of AOgmaNeo"
license = "CC-BY-NC-SA-4.0"

[features]
gymnasium-examples = ["dep:pyo3"]

[dependencies]
rayon = "1.10"
pyo3 = { version = "0.22", optional = true, features = ["auto-initialize"] }

[[example]]
name = "cartpole_env_runner"
required-features = ["gymnasium-examples"]

[[example]]
name = "lunarlander"
required-features = ["gymnasium-examples"]
